fix bug that sliding window was covered by the map

--- a/styles/style.css
+++ b/styles/style.css
@@ -161,6 +161,10 @@ footer a {
     transition: 0.2s;
 }
 
+#map {
+    z-index: 0;
+}
+
 .material-icons2 {
     cursor: pointer;
     font-size: 25px;
